--- a/TP/index.html
+++ b/TP/index.html
@@ -8,7 +8,28 @@
     <link type="text/css" rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
-    texte
-    texte 2
+    <div class="topflex">
+        <div class="logo">
+            BTM
+        </div>
+        <div class="toplinks">
+            <div class="Chaussures">
+              Chaussures
+             </div>
+            <div class="Mobilier">
+                Mobilier
+            </div>
+            <div class="Fruits">
+               Fruits
+        </div>
+              
+    </div>
+    </div>
+
+    
+    <div class="barreblanche">
+
+    </div>
+   
 </body>
 </html>
