--- a/TP/index.html
+++ b/TP/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,29 +8,34 @@
     <title>Document</title>
     <link type="text/css" rel="stylesheet" href="css/stylesheet.css">
 </head>
+
 <body>
     <div class="topflex">
         <div class="logo">
             BTM
         </div>
-        <div class="toplinks">
-            <div class="Chaussures">
-              Chaussures
-             </div>
-            <div class="Mobilier">
-                Mobilier
-            </div>
-            <div class="Fruits">
-               Fruits
+        <div class="Chaussures">
+            Chaussures
         </div>
-              
-    </div>
+        <div class="Mobilier">
+            Mobilier
+        </div>
+        <div class="Fruits">
+            Fruits
+        </div>
+        <div class="cartlogo">
+            <img src="img/cart.svg"><img>
+        </div>
+        <div class="searchlogo">
+            <img src="img/search.svg"><img>
+        </div>
     </div>
 
-    
+
     <div class="barreblanche">
 
     </div>
-   
+
 </body>
+
 </html>
