--- a/TP/index.html
+++ b/TP/index.html
@@ -24,18 +24,24 @@
             Fruits
         </div>
         <div class="cartlogo">
-            <img src="img/cart.svg"><img>
+            <img src="img/cart.svg"></img>
         </div>
         <div class="searchlogo">
-            <img src="img/search.svg"><img>
+            <img src="img/search.svg"></img>
         </div>
     </div>
 
 
-    <div class="barreblanche">
+    <div class="barreblanche"></div>
 
+    <div class="contentflex">
+        <div class="pageindicator">
+            Fruits > agrumes
+        </div>
+        <div class="fruitimage">
+            <img src="img/citron.png"></img>
+        </div>
     </div>
-
 </body>
 
 </html>
