--- a/TP/index.html
+++ b/TP/index.html
@@ -35,11 +35,17 @@
     <div class="barreblanche"></div>
 
     <div class="contentflex">
-        <div class="pageindicator">
+        <div class="textinpage">
             Fruits > agrumes
         </div>
         <div class="fruitimage">
             <img src="img/citron.png"></img>
+        </div>
+        <div class="textinpage">
+            Caractéristiques:
+            <ul>acide</ul>
+            <ul>piquant et acide</ul>
+            <ul>plein de vitamines</ul>
         </div>
     </div>
 </body>
